[ADD] added nakama +read me
